# snell-ufw-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  snell-ufw-menu.sh
.agents/: AGENTS.md
app/: __init__.py  config.py  db.py  locks.py  main.py  models.py  schemas.py  security.py
app/services/: audit.py  candidates.py  nodes.py  policies.py  relay_groups.py  remote_actions.py  ssh_executor.py  ufw_parser.py
app/static/: app.css
app/templates/: base.html  dashboard.html  login.html
app/templates/audit/: index.html
app/templates/nodes/: detail.html  index.html
app/templates/policies/: index.html
app/templates/profiles/: index.html
controller/: config.yaml  install.sh  multi-vps-firewall-manager.service  requirements.txt  snell-ufw-manager.service
controller/app/: config.py  database.py  main.py  ssh_executor.py  test_helpers.py  test_migration.py  test_ssh_executor.py
node/: nft-fwctl  setup-node.sh  snell-fwctl  snellctl  systemctl  test_nft_fwctl.py  ufwctl
scripts/: install-controller.sh  install-node.sh  uninstall-node.sh
systemd/: snell-ufw-control.service
tests/: test_audit.py  test_auth.py  test_candidates.py  test_controller_crud.py  test_db_migrations.py  test_locks.py  test_models.py  test_node_detail_actions.py  test_nodes_service.py  test_packaging_files.py  test_policies.py  test_remote_actions.py  test_ssh_executor.py  test_templates.py  test_ufw_parser.py  test_validation.py
tests_node/: test_node_json_contract.py  test_snell_fwctl.py  test_snellctl.py  test_systemctl.py  test_ufwctl.py
(+30 files in other folders)
