[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "snell-ufw-control"
version = "0.1.0"
description = "Local-only Snell Server and UFW allowlist control center"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_node"]
pythonpath = ["."]
addopts = "-ra"
